--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~10.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "primeng": "10.0.0",
+    "primeicons": "4.0.0",
+    "primeflex": "2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.1",
