--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "zone.js": "~0.10.2",
     "primeng": "10.0.0",
     "primeicons": "4.0.0",
-    "primeflex": "2.0.0"
+    "primeflex": "2.0.0",
+    "@fortawesome/fontawesome-free": "5.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.1",
